[package]
name = "tokio-stream-ext"
version = "0.1.4"
authors = ["Alex Halemba <alex-halemba@gmx.de>"]
edition = "2018"
repository = "https://github.com/Alexander89/tokio-stream-ext"
license-file = "./LICENCE"
readme = "./README.md"
keywords = ["Stream", "Rx", "operators", "future", "tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.16"
pin-project-lite = "0.2.7"
tokio-stream = "0.1.7"
tokio = { version = "1.10.1" }
